--- a/smallStyle.css
+++ b/smallStyle.css
@@ -88,7 +88,8 @@ nav a:hover {
 }
 #bodyText {
   margin-left: 2%;
-  margin-right: 2%
+  margin-right: 2%;
+  margin-bottom: 70px;
 }
 #bodyText p {
   text-indent: 2em;
@@ -100,15 +101,41 @@ nav a:hover {
 #bodyText h2 {
   font-size: 30px;
 }
+
+
+
 #resumeBody {
- margin-left: 2%;
- margin-right: 2%;
+  margin-left: 1.5%;
+  margin-right: 1.5%;
+  padding-bottom: 5%;
+  margin-bottom: 70px;
+}
+#educationBody {
+  margin-top: 40px;
+  border-style: double;
+  border-color: #B93B8F;
+  border-width: 15px;
+  padding: 10px;
+}
+#experienceBody {
+  border-style: double;
+  border-color: #B892C0;
+  border-width: 15px;
+  padding: 10px;
+  margin-top: 20px;
+}
+#activitiesBody {
+  border-style: double;
+  border-color:  #575D90;
+  border-width: 15px;
+  padding: 10px;
+  margin-top: 20px;
 }
 #resumeBody h2 {
-  font-size: 35px;
-  border-bottom-style: solid;
-  border-bottom-width: 7px;
-  border-bottom-color: #B93B8F;
+  margin-top: 0;
+  font-size: 40px;
+  width: 1000px;
+
 }
 #resumeBody h3 {
   margin-bottom: 0;
@@ -120,9 +147,19 @@ ul {
 li {
   padding: 5px;
 }
+
+
+
+
+#internshipsBody {
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 70px;
+}
 #internshipsBody h2 {
- font-size: 30px;
+ font-size: 40px;
  text-align: center;
+
 }
 #internshipsBody h3 {
   font-size: 28px;
@@ -130,8 +167,8 @@ li {
 }
 #theHawk {
   margin-top: 5%;
-  margin-left: 1.5%;
-  margin-right: 1.5%;
+  margin-left: 1%;
+  margin-right: 1%;
   padding-left: 5%;
   padding-bottom: 5%;
   padding-right: 5%;
@@ -142,8 +179,8 @@ li {
 }
 #prospect {
   margin-top: 5%;
-  margin-left: 1.5%;
-  margin-right: 1.5%;
+  margin-left: 1%;
+  margin-right: 1%;
   padding-left: 5%;
   padding-bottom: 5%;
   padding-right: 5%;
@@ -153,8 +190,8 @@ li {
 }
 #museum {
   margin-top: 5%;
-  margin-left: 1.5%;
-  margin-right: 1.5%;
+  margin-left: 1%;
+  margin-right: 1%;
   padding-left: 5%;
   padding-bottom: 5%;
   padding-right: 5%;
@@ -170,46 +207,53 @@ li {
   font-size: 20px;
   margin-top: 0;
 }
+
+
+
+#writingBody {
+  margin-right: 1%;
+  margin-left: 1%;
+  margin-bottom: 70px;
+
+
+}
 #writingBody h2 {
-  margin-left: 2%;
-  margin-right: 2%;
   font-size: 40px;
-  border-bottom-width: 7px;
-  border-bottom-style: solid;
-  border-bottom-color: #F88158;
+  background-color: #F88158;
+  border: 15px double white;
+  color: white;
+  text-align: center;
+  padding: 4px;
+  margin-top: 40px;
+  margin-bottom: 7%;
+}
+#writingBody p {
+  text-indent: 2em;
 }
 #writingBody a {
-  margin-left: 2%;
-  margin: right: 2%;
   text-decoration: none;
   color: #575D90;
 }
-#writingBody {
-  margin-left: 2%;
-  margin-right: 2%;
-}
+
+
+
 #contactBody {
-  margin-right: 2%;
-  margin-left: 2%;
+  margin-right: auto;
+  margin-left: auto;
 }
 #contactBody h2 {
-  font-size: 30px;
-  border-bottom-style: solid;
-  border-bottom-color: #f36886;
-  border-bottom-width: 7px;
-  margin-bottom: 0;
-}
-#email {
-  text-align: right;
-  font-size: 30px;
-}
-#twitter {
-  text-align: right;
-  font-size: 30px;
+  width: 40%;
+  margin-top: 50px;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  font-size: 40px;
+  color: white;
+  background-color:#f36886;
+  border: 10px white double;
+  padding: 10px;
 }
 #contactBody a {
-  color: black;
-}
-#resumeBody ul {
-  list-style-image: url("dot.jpg")
+  color: white;
+  text-decoration: none;
 }
